# ssid

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ssid.entitlements
.github/workflows/: build.yml  clippy.yml  release.yml
specs/ssid-identification/: design.md  requirements.md  tasks.md
src/: ios.rs  lib.rs  linux.rs  macos.rs  main.rs  unsupported.rs  windows.rs
